--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Doug Tabuchi</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Doug Tabuchi!</h1>
-				<p>Canoeing, Kayaking, Hiking, Biking, Climbing, BBQ, Woodworking and Programming<a href="/about">Read more about me...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:doug@dougtabuchi.com">email</a></li>
-        		<li><a href="https://github.com/tabuchid">github.com/tabuchid</a></li>
-			</ul>
-		</footer>
-	</body>
+    <head>
+        <title>Doug Tabuchi</title>
+        <!-- link to main stylesheet -->
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/cv">CV</a></li>
+                <li><a href="/blog">Blog</a></li>
+            </ul>
+        </nav>
+        <div class="container">
+            <div class="blurb">
+                <h1>Hi there, I'm Doug Tabuchi!</h1>
+                <p>Canoeing, Kayaking, Hiking, Biking, Climbing, BBQ, Woodworking and Programming<a href="/about">Read more about me...</a></p>
+            </div><!-- /.blurb -->
+        </div><!-- /.container -->
+        <footer>
+            <ul>
+                <li><a href="mailto:doug@dougtabuchi.com">email</a></li>
+                <li><a href="https://github.com/tabuchid">github.com/tabuchid</a></li>
+            </ul>
+        </footer>
+    </body>
 </html>
